--- a/ui/src/main/res/values-vi-rVN/strings.xml
+++ b/ui/src/main/res/values-vi-rVN/strings.xml
@@ -94,6 +94,9 @@
     <string name="tv_select_a_storage_drive">Chọn bộ lưu trữ</string>
     <string name="tv_no_file_picker">Vui lòng cài đặt tệp tiện ích lưu trữ để tìm kiếm các tệp</string>
     <string name="tv_add_tunnel_get_started">Thêm một tunnel để bắt đầu</string>
+    <string name="donate_title">❤️ Đóng góp cho Dự án Wireguard</string>
+    <string name="donate_summary">Mọi đóng góp đều giúp ích</string>
+    <string name="donate_google_play_disappointment">Cảm ơn bạn đã ủng hộ WireGuard!\n\nThật tiếc, dựa trên điều khoản của Google, chúng tôi không thể đưa vào liên kết dẫn đến trang đóng góp ở trang chủ của dự án. Mong rằng bạn có thể tìm cách cho việc này!\n\nXin cảm ơn bạn một lần nữa vì đã đóng góp.</string>
     <string name="disable_config_export_title">Vô hiệu hóa xuất cấu hình</string>
     <string name="disable_config_export_description">Vô hiệu hóa xuất cấu hình sẽ giúp giảm khả năng truy cập vào private keys</string>
     <string name="dns_servers">DNS servers</string>
@@ -103,9 +106,34 @@
     <string name="error_down">Có lỗi khi tắt tunnel: %s</string>
     <string name="error_fetching_apps">Lỗi khi lấy danh sách ứng dụng: %s</string>
     <string name="error_root">Vui lòng truy cập bằng quyền root và thử lại</string>
+    <string name="error_prepare">Lỗi khi chuẩn bị tunnel: %s</string>
     <string name="error_up">Có lỗi khi bật tunnel: %s</string>
     <string name="exclude_private_ips">Loại trừ IPs private</string>
     <string name="generate_new_private_key">Tạo private key mới</string>
+    <string name="generic_error">Lỗi \"%s\" không xác định</string>
+    <string name="hint_automatic">(tự động)</string>
+    <string name="hint_generated">(được tạo tự động)</string>
+    <string name="hint_optional">(tùy chọn)</string>
+    <string name="hint_optional_discouraged">(tùy chọn, không khuyến khích)</string>
+    <string name="hint_random">(ngẫu nhiên)</string>
+    <string name="illegal_filename_error">Tên file không hợp lệ \"%s\"</string>
+    <string name="import_error">Không thể nhập tunnel: %s</string>
+    <string name="import_from_qr_code">Nhập tunnel từ mã QR</string>
+    <string name="import_success">Đã nhập \"%s\"</string>
+    <string name="interface_title">Giao diện</string>
+    <string name="key_contents_error">Kí tự không hợp lệ trong khoá</string>
+    <string name="key_length_error">Độ dài khoá không hợp lệ</string>
+    <string name="key_length_explanation_base64">: Khoá WireGuard base64 phải đủ 44 ký tự (32 bytes)</string>
+    <string name="key_length_explanation_binary">: Khoá WireGuard phải đủ 32 bytes</string>
+    <string name="key_length_explanation_hex">: Khoá WireGuard hex phải đủ 64 ký tự (32 bytes)</string>
+    <string name="latest_handshake">Lần bắt tay cuối</string>
+    <string name="latest_handshake_ago">%s giây trước</string>
+    <string name="listen_port">Cổng</string>
+    <string name="log_export_error">Không thể xuất nhật ký: %s</string>
+    <string name="log_export_subject">File nhật ký WireGuard Android</string>
+    <string name="log_export_success">Đã lưu vào \"%s\"</string>
+    <string name="log_export_title">Xuất file nhật ký</string>
+    <string name="log_saver_activity_label">Lưu nhật ký</string>
     <string name="parse_error_inet_address">Địa chỉ IP</string>
     <string name="peer">Đồng trang lứa</string>
 </resources>
