--- a/ui/src/main/res/values-ja/strings.xml
+++ b/ui/src/main/res/values-ja/strings.xml
@@ -96,6 +96,7 @@
     <string name="tv_add_tunnel_get_started">トンネルを追加して開始する</string>
     <string name="donate_title">♥ WireGuard プロジェクトに寄付する</string>
     <string name="donate_summary">すべての貢献が役立ちます</string>
+    <string name="donate_google_play_disappointment">WireGuard プロジェクトを支援していただきありがとうございます！\n\n残念ながら、Google のポリシーの影響で寄付のページへのリンクを記載することができません。見つけていただけることを願っています。\n\nもう一度、あなたの貢献に深く感謝します。</string>
     <string name="disable_config_export_title">設定のエクスポートを無効にする</string>
     <string name="disable_config_export_description">設定のエクスポートを無効にすると、秘密鍵にアクセスされにくくなります</string>
     <string name="dns_servers">DNS サーバ</string>
@@ -170,6 +171,10 @@
     <string name="private_key">秘密鍵</string>
     <string name="public_key">公開鍵</string>
     <string name="qr_code_hint">Tip: `qrencode -t ansiutf8 &lt; tunnel.conf` で生成できます</string>
+    <string name="quick_settings_tile_add_title">クイック設定パネルを追加</string>
+    <string name="quick_settings_tile_add_summary">ショートカットタイルを使用すると、最新のトンネルに切り替わります</string>
+    <string name="quick_settings_tile_add_failure">ショートカットタイルを追加できません: エラー %d</string>
+    <string name="quick_settings_tile_action">トンネルを切り替え</string>
     <string name="restore_on_boot_summary_off">起動時にトンネルを有効化しない</string>
     <string name="restore_on_boot_summary_on">起動時に、前回有効だったトンネルを有効化する</string>
     <string name="restore_on_boot_title">起動時に復元</string>
@@ -214,6 +219,16 @@
     <string name="type_name_go_userspace">Go ユーザースペース</string>
     <string name="type_name_kernel_module">カーネルモジュール</string>
     <string name="unknown_error">未知のエラー</string>
+    <string name="updater_avalable">アプリを更新できます。今すぐ更新してください。</string>
+    <string name="updater_action">ダウンロードして更新</string>
+    <string name="updater_rechecking">更新のメタデータを取得しています…</string>
+    <string name="updater_download_progress">更新のダウンロード中: %1$s / %2$s (%3$.2f%%)</string>
+    <string name="updater_download_progress_nototal">更新のダウンロード中: %s</string>
+    <string name="updater_installing">更新をインストール中…</string>
+    <string name="updater_failure">更新に失敗しました: %s. 一定時間後に再試行します…</string>
+    <string name="updater_corrupt_title">アプリケーションが破損しています</string>
+    <string name="updater_corrupt_message">このアプリケーションは破損しています。下記のリンク先のウェブサイトから APK を再ダウンロードしてください。その後、このアプリケーションをアンインストールし、ダウンロードした APK を再インストールしてください。</string>
+    <string name="updater_corrupt_navigate">ウェブサイトを開く</string>
     <string name="version_summary">%1$s バックエンド %2$s</string>
     <string name="version_summary_checking">%s バックエンドのバージョンを確認中</string>
     <string name="version_summary_unknown">未知の %s バージョン</string>
