--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="delete_error">
-        <item quantity="one">Unable to delete %d tunnel: %s</item>
-        <item quantity="other">Unable to delete %d tunnels: %s</item>
+        <item quantity="one">Unable to delete %d connection: %s</item>
+        <item quantity="other">Unable to delete %d connections: %s</item>
     </plurals>
     <plurals name="delete_success">
-        <item quantity="one">Successfully deleted %d tunnel</item>
-        <item quantity="other">Successfully deleted %d tunnels</item>
+        <item quantity="one">Successfully deleted %d connection</item>
+        <item quantity="other">Successfully deleted %d connections</item>
     </plurals>
     <plurals name="delete_title">
-        <item quantity="one">%d tunnel selected</item>
-        <item quantity="other">%d tunnels selected</item>
+        <item quantity="one">%d connection selected</item>
+        <item quantity="other">%d connections selected</item>
     </plurals>
     <plurals name="import_partial_success">
-        <item quantity="one">Imported %1$d of %2$d tunnels</item>
-        <item quantity="other">Imported %1$d of %2$d tunnels</item>
+        <item quantity="one">Imported %1$d of %2$d connections</item>
+        <item quantity="other">Imported %1$d of %2$d connections</item>
     </plurals>
     <plurals name="import_total_success">
-        <item quantity="one">Imported %d tunnel</item>
-        <item quantity="other">Imported %d tunnels</item>
+        <item quantity="one">Imported %d connection</item>
+        <item quantity="other">Imported %d connection</item>
     </plurals>
     <plurals name="set_excluded_applications">
         <item quantity="one">%d Excluded Application</item>
@@ -59,11 +59,11 @@
     <string name="add_peer">Add peer</string>
     <string name="addresses">Addresses</string>
     <string name="applications">Applications</string>
-    <string name="allow_remote_control_intents_summary_off">External apps may not toggle tunnels (recommended)</string>
-    <string name="allow_remote_control_intents_summary_on">External apps may toggle tunnels (advanced)</string>
+    <string name="allow_remote_control_intents_summary_off">External apps may not toggle connections (recommended)</string>
+    <string name="allow_remote_control_intents_summary_on">External apps may toggle connections (advanced)</string>
     <string name="allow_remote_control_intents_title">Allow remote control apps</string>
     <string name="allowed_ips">Allowed IPs</string>
-    <string name="app_name" translatable="false">WireGuard</string>
+    <string name="app_name" translatable="false">Jimber</string>
     <string name="bad_config_context">%1$s\'s %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s in %2$s</string>
@@ -90,7 +90,7 @@
     <string name="config_rename_error">Cannot rename configuration file “%s”</string>
     <string name="config_save_error">Cannot save configuration for “%1$s”: %2$s</string>
     <string name="config_save_success">Successfully saved configuration for “%s”</string>
-    <string name="create_activity_title">Create WireGuard Tunnel</string>
+    <string name="create_activity_title">Create Jimber Connection</string>
     <string name="create_bin_dir_error">Cannot create local binary directory</string>
     <string name="create_downloads_file_error">Cannot create file in downloads directory</string>
     <string name="create_empty">Create from scratch</string>
@@ -98,16 +98,16 @@
     <string name="create_from_qr_code">Scan from QR code</string>
     <string name="create_output_dir_error">Cannot create output directory</string>
     <string name="create_temp_dir_error">Cannot create local temporary directory</string>
-    <string name="create_tunnel">Create Tunnel</string>
+    <string name="create_tunnel">Create Connection</string>
     <string name="copied_to_clipboard">%s copied to clipboard</string>
     <string name="dark_theme_summary_off">Currently using light (day) theme</string>
     <string name="dark_theme_summary_on">Currently using dark (night) theme</string>
     <string name="dark_theme_title">Use dark theme</string>
     <string name="delete">Delete</string>
-    <string name="tv_delete">Select tunnel to delete</string>
+    <string name="tv_delete">Select connection to delete</string>
     <string name="tv_select_a_storage_drive">Select a storage drive</string>
     <string name="tv_no_file_picker">Please install a file management utility to browse files</string>
-    <string name="tv_add_tunnel_get_started">Add a tunnel to get started</string>
+    <string name="tv_add_tunnel_get_started">Add a connection to get started</string>
     <string name="donate_title">♥ Donate to the WireGuard Project</string>
     <string name="donate_summary">Every contribution helps</string>
     <string name="donate_google_play_disappointment">Thank you for supporting the WireGuard Project!\n\nUnfortunately, due to Google\'s policies, we\'re not allowed to link to the part of the project webpage where you can make a donation. Hopefully you can figure this out!\n\nThanks again for your contribution.</string>
@@ -117,11 +117,11 @@
     <string name="dns_search_domains">Search domains</string>
     <string name="edit">Edit</string>
     <string name="endpoint">Endpoint</string>
-    <string name="error_down">Error bringing down tunnel: %s</string>
+    <string name="error_down">Error bringing down connection: %s</string>
     <string name="error_fetching_apps">Error fetching apps list: %s</string>
     <string name="error_root">Please obtain root access and try again</string>
-    <string name="error_prepare">Error preparing tunnel: %s</string>
-    <string name="error_up">Error bringing up tunnel: %s</string>
+    <string name="error_prepare">Error preparing connection: %s</string>
+    <string name="error_up">Error bringing up connection: %s</string>
     <string name="exclude_private_ips">Exclude private IPs</string>
     <string name="generate_new_private_key">Generate new private key</string>
     <string name="generic_error">Unknown “%s” error</string>
@@ -131,20 +131,20 @@
     <string name="hint_optional_discouraged">(optional, not recommended)</string>
     <string name="hint_random">(random)</string>
     <string name="illegal_filename_error">Illegal file name “%s”</string>
-    <string name="import_error">Unable to import tunnel: %s</string>
-    <string name="import_from_qr_code">Import Tunnel from QR Code</string>
+    <string name="import_error">Unable to import connection: %s</string>
+    <string name="import_from_qr_code">Import Connection from QR Code</string>
     <string name="import_success">Imported “%s”</string>
     <string name="interface_title">Interface</string>
     <string name="key_contents_error">Bad characters in key</string>
     <string name="key_length_error">Incorrect key length</string>
-    <string name="key_length_explanation_base64">: WireGuard base64 keys must be 44 characters (32 bytes)</string>
-    <string name="key_length_explanation_binary">: WireGuard keys must be 32 bytes</string>
-    <string name="key_length_explanation_hex">: WireGuard hex keys must be 64 characters (32 bytes)</string>
+    <string name="key_length_explanation_base64">: Jimber base64 keys must be 44 characters (32 bytes)</string>
+    <string name="key_length_explanation_binary">: Jimber keys must be 32 bytes</string>
+    <string name="key_length_explanation_hex">: Jimber hex keys must be 64 characters (32 bytes)</string>
     <string name="latest_handshake">Latest handshake</string>
     <string name="latest_handshake_ago">%s ago</string>
     <string name="listen_port">Listen port</string>
     <string name="log_export_error">Unable to export log: %s</string>
-    <string name="log_export_subject">WireGuard Android Log File</string>
+    <string name="log_export_subject">Jimber Android Log File</string>
     <string name="log_export_success">Saved to “%s”</string>
     <string name="log_export_title">Export log file</string>
     <string name="log_saver_activity_label">Save log</string>
@@ -163,13 +163,13 @@
     <string name="module_installer_working">Downloading and installing…</string>
     <string name="module_version_error">Unable to determine kernel module version</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_summary_off">Turning on one tunnel will turn off others</string>
-    <string name="multiple_tunnels_summary_on">Multiple tunnels may be turned on simultaneously</string>
-    <string name="multiple_tunnels_title">Allow multiple simultaneous tunnels</string>
+    <string name="multiple_tunnels_summary_off">Turning on one connection will turn off others</string>
+    <string name="multiple_tunnels_summary_on">Multiple connections may be turned on simultaneously</string>
+    <string name="multiple_tunnels_title">Allow multiple simultaneous connections</string>
     <string name="name">Name</string>
-    <string name="no_config_error">Trying to bring up a tunnel with no config</string>
+    <string name="no_config_error">Trying to bring up a connection with no config</string>
     <string name="no_configs_error">No configurations found</string>
-    <string name="no_tunnels_error">No tunnels exist</string>
+    <string name="no_tunnels_error">No connections exist</string>
     <string name="parse_error_generic">string</string>
     <string name="parse_error_inet_address">IP address</string>
     <string name="parse_error_inet_endpoint">endpoint</string>
@@ -177,8 +177,8 @@
     <string name="parse_error_integer">number</string>
     <string name="parse_error_reason">Cannot parse %1$s “%2$s”</string>
     <string name="peer">Peer</string>
-    <string name="permission_description">control WireGuard tunnels, enabling and disabling tunnels at will, potentially misdirecting Internet traffic</string>
-    <string name="permission_label">control WireGuard tunnels</string>
+    <string name="permission_description">control Jimber connections, enabling and disabling connections at will, potentially misdirecting Internet traffic</string>
+    <string name="permission_label">control Jimber connections</string>
     <string name="persistent_keepalive">Persistent keepalive</string>
     <string name="pre_shared_key">Pre-shared key</string>
     <string name="pre_shared_key_enabled">enabled</string>
@@ -186,11 +186,11 @@
     <string name="public_key">Public key</string>
     <string name="qr_code_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="quick_settings_tile_add_title">Add tile to quick settings panel</string>
-    <string name="quick_settings_tile_add_summary">The shortcut tile toggles the most recent tunnel</string>
+    <string name="quick_settings_tile_add_summary">The shortcut tile toggles the most recent connection</string>
     <string name="quick_settings_tile_add_failure">Unable to add shortcut tile: error %d</string>
-    <string name="quick_settings_tile_action">Toggle tunnel</string>
-    <string name="restore_on_boot_summary_off">Will not bring up enabled tunnels at boot</string>
-    <string name="restore_on_boot_summary_on">Will bring up enabled tunnels at boot</string>
+    <string name="quick_settings_tile_action">Toggle connection</string>
+    <string name="restore_on_boot_summary_off">Will not bring up enabled connections at boot</string>
+    <string name="restore_on_boot_summary_on">Will bring up enabled connections at boot</string>
     <string name="restore_on_boot_title">Restore on boot</string>
     <string name="save">Save</string>
     <string name="select_all">Select all</string>
@@ -200,7 +200,7 @@
     <string name="shell_start_error">Shell failed to start: %d</string>
     <string name="success_application_will_restart">Success. The application will now restart…</string>
     <string name="toggle_all">Toggle All</string>
-    <string name="toggle_error">Error toggling WireGuard tunnel: %s</string>
+    <string name="toggle_error">Error toggling Jimber connection: %s</string>
     <string name="tools_installer_already">wg and wg-quick are already installed</string>
     <string name="tools_installer_failure">Unable to install command-line tools (no root?)</string>
     <string name="tools_installer_initial">Install optional tools for scripting</string>
@@ -219,17 +219,17 @@
     <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">Unable to create tun device</string>
-    <string name="tunnel_config_error">Unable to configure tunnel (wg-quick returned %d)</string>
-    <string name="tunnel_create_error">Unable to create tunnel: %s</string>
-    <string name="tunnel_create_success">Successfully created tunnel “%s”</string>
-    <string name="tunnel_error_already_exists">Tunnel “%s” already exists</string>
+    <string name="tunnel_config_error">Unable to configure connection (wg-quick returned %d)</string>
+    <string name="tunnel_create_error">Unable to create connection: %s</string>
+    <string name="tunnel_create_success">Successfully created connection “%s”</string>
+    <string name="tunnel_error_already_exists">Connection “%s” already exists</string>
     <string name="tunnel_error_invalid_name">Invalid name</string>
-    <string name="tunnel_list_placeholder">Add a tunnel using the button below</string>
-    <string name="tunnel_name">Tunnel Name</string>
-    <string name="tunnel_on_error">Unable to turn tunnel on (wgTurnOn returned %d)</string>
+    <string name="tunnel_list_placeholder">Add a connection using the button below</string>
+    <string name="tunnel_name">Connection Name</string>
+    <string name="tunnel_on_error">Unable to turn connection on (wgTurnOn returned %d)</string>
     <string name="tunnel_dns_failure">Unable to resolve DNS hostname: “%s”</string>
-    <string name="tunnel_rename_error">Unable to rename tunnel: %s</string>
-    <string name="tunnel_rename_success">Successfully renamed tunnel to “%s”</string>
+    <string name="tunnel_rename_error">Unable to rename connection: %s</string>
+    <string name="tunnel_rename_success">Successfully renamed connection to “%s”</string>
     <string name="type_name_go_userspace">Go userspace</string>
     <string name="type_name_kernel_module">Kernel module</string>
     <string name="unknown_error">Unknown error</string>
@@ -246,14 +246,14 @@
     <string name="version_summary">%1$s backend %2$s</string>
     <string name="version_summary_checking">Checking %s backend version</string>
     <string name="version_summary_unknown">Unknown %s version</string>
-    <string name="version_title">WireGuard for Android v%s</string>
+    <string name="version_title">Jimber Network Isolation for Android v%s</string>
     <string name="vpn_not_authorized_error">VPN service not authorized by user</string>
     <string name="vpn_start_error">Unable to start Android VPN service</string>
-    <string name="zip_export_error">Unable to export tunnels: %s</string>
+    <string name="zip_export_error">Unable to export connections: %s</string>
     <string name="zip_export_success">Saved to “%s”</string>
     <string name="zip_export_summary">Zip file will be saved to downloads folder</string>
-    <string name="zip_export_title">Export tunnels to zip file</string>
-    <string name="biometric_prompt_zip_exporter_title">Authenticate to export tunnels</string>
+    <string name="zip_export_title">Export connections to zip file</string>
+    <string name="biometric_prompt_zip_exporter_title">Authenticate to export connections</string>
     <string name="biometric_prompt_private_key_title">Authenticate to view private key</string>
     <string name="biometric_auth_error">Authentication failure</string>
     <string name="biometric_auth_error_reason">Authentication failure: %s</string>
