--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -224,7 +224,7 @@
     <string name="tunnel_create_success">Successfully created connection “%s”</string>
     <string name="tunnel_error_already_exists">Connection “%s” already exists</string>
     <string name="tunnel_error_invalid_name">Invalid name</string>
-    <string name="tunnel_list_placeholder">Add a connection using the button below</string>
+    <string name="tunnel_list_placeholder">Sign in to your account</string>
     <string name="tunnel_name">Connection Name</string>
     <string name="tunnel_on_error">Unable to turn connection on (wgTurnOn returned %d)</string>
     <string name="tunnel_dns_failure">Unable to resolve DNS hostname: “%s”</string>
@@ -257,4 +257,10 @@
     <string name="biometric_prompt_private_key_title">Authenticate to view private key</string>
     <string name="biometric_auth_error">Authentication failure</string>
     <string name="biometric_auth_error_reason">Authentication failure: %s</string>
+    <string name="sign_in_to_your_account">Sign in to your account</string>
+    <string name="menu">menu</string>
+    <string name="jimber_logo">Jimber logo</string>
+    <string name="sign_in_with_email">Sign in with Email</string>
+    <string name="sign_in_with_microsoft">Sign in with Microsoft</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
 </resources>
