--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -260,4 +260,6 @@
     <string name="biometric_prompt_private_key_title">Authenticate to view private key</string>
     <string name="biometric_auth_error">Authentication failure</string>
     <string name="biometric_auth_error_reason">Authentication failure: %s</string>
+    <string name="quick_settings_tile_connecting">Connecting…</string>
+    <string name="preparing_tunnel">Preparing tunnel…</string>
 </resources>
